[tool.poetry]
name = "repl_python3_beta_codetalk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

flask-bootstrap = "^3.3.7"
wtforms = "^2.3.3"
flask-wtf = "^0.14.3"
replit = "^3.0.0"
flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
